<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <Button
        android:id="@+id/button1"
        android:textSize="16sp"
        android:text="@string/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button2"
        android:textSize="16sp"
        android:text="@string/button2"
        android:layout_toRightOf="@id/button1"
        android:layout_below="@id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button3"
        android:textSize="16sp"
        android:text="@string/button3"
        android:layout_toRightOf="@id/button2"
        android:layout_below="@id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button4"
        android:textSize="16sp"
        android:text="@string/button4"
        android:layout_toRightOf="@id/button2"
        android:layout_above="@id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button5"
        android:textSize="16sp"
        android:text="@string/button5"
        android:layout_toLeftOf="@id/button2"
        android:layout_below="@id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>